WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278255
SimulateClickOverText.ClickTargets* API tests fail with debug assertions
https://bugs.webkit.org/show_bug.cgi?id=278255
Summary
SimulateClickOverText.ClickTargets* API tests fail with debug assertions
Wenson Hsieh
Reported
2024-08-16 14:05:07 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-08-16 14:36:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32323
EWS
Comment 2
2024-08-16 17:22:29 PDT
Committed
282374@main
(8421fbee7147): <
https://commits.webkit.org/282374@main
> Reviewed commits have been landed. Closing PR #32323 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-08-16 17:23:21 PDT
<
rdar://problem/134097244
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug