SimulateClickOverText.ClickTargets* API tests fail with debug assertions https://bugs.webkit.org/show_bug.cgi?id=278255

Reviewed by Richard Robinson.

These API tests were hitting a debug assertion in `RenderObject::absoluteTextRects`, due to the fact
that both `UseVisibleBounds` and `IgnoreTinyRects` options were being ignored when calling into that
method.

Fix this by using `absoluteBorderAndTextRects` instead, which both honors the two options above when
computing the bounding rect, and fulfills the same purpose as `absoluteTextRects`.

* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::simulateClickOverFirstMatchingTextInViewportWithUserInteraction):

Canonical link: https://commits.webkit.org/282374@main